--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ description = ...
 long_description = file: README.md
 long_description_content_type = text/markdown
 license_file = LICENSE
-url = https://github.com/mims-harvard
+url = https://github.com/mims-harvard/PDGrapher
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
