--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,248 @@
-lightning
+absl-py==1.0.0
+alembic==1.7.7
+anndata==0.8.0
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.0.5
+astunparse==1.6.3
+attrs==21.4.0
+autopage==0.5.0
+backcall==0.2.0
+beautifulsoup4==4.10.0
+bio==1.4.0
+biopython==1.80
+biothings-client==0.2.6
+bleach==4.1.0
+bs4==0.0.1
+cachetools==5.0.0
+causaldag==0.1a163
+certifi==2022.6.15
+cffi==1.15.0
+charset-normalizer==2.0.12
+class-resolver==0.3.8
+click==8.1.2
+click-default-group==1.2.2
+cliff==3.10.1
+cloudpickle==2.1.0
+cmaes==0.8.2
+cmd2==2.4.0
+colorlog==6.6.0
+conditional-independence==0.1a5
+contourpy==1.0.7
+csrgraph==0.1.28
+cycler==0.11.0
+Cython==0.29.32
+dask==2022.12.0
+dataclasses==0.6
+dataclasses-json==0.5.7
+debugpy==1.5.1
+decorator==5.1.1
+deepchem==2.6.1
+defusedxml==0.7.1
+dgl==0.9.0
+dgl-cu102==0.6.1
+dgllife==0.3.0
+dill==0.3.6
+dm-tree==0.1.7
+docdata==0.0.3
+docopt==0.6.2
+docrep==0.3.2
+einops==0.4.1
+entrypoints==0.4
+et-xmlfile==1.1.0
+executing==0.8.3
+filelock==3.8.0
+fisher==0.1.10
+flatbuffers==1.12
+fonttools==4.31.1
+frozendict==2.3.4
+fsspec==2022.11.0
+fst-pso==1.8.1
+future==0.18.2
+FuzzyTM==2.0.5
+gast==0.4.0
+gensim==0.10.2
+goatools==1.2.3
+google-auth==2.6.2
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+graphical-model-learning==0.1a7
+graphical-models==0.1a16
+greenlet==1.1.1
+grpcio==1.44.0
+h5py==3.6.0
+hdf5plugin==4.1.1
+hickle==5.0.2
+huggingface-hub==0.9.1
+hyperopt==0.2.7
+idna==3.3
+igraph==0.10.2
+importlib-metadata==4.11.3
+importlib-resources==5.4.0
+inflect==5.4.0
+ipdb==0.13.9
+ipykernel==6.9.2
+ipython==8.1.1
+ipython-genutils==0.2.0
+ipywidgets==7.7.0
+jedi==0.18.1
+Jinja2==3.0.3
+joblib==1.1.0
+jsonschema==4.4.0
+jupyter==1.0.0
+jupyter-client==7.1.2
+jupyter-console==6.4.3
+jupyter-core==4.9.2
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.1.0
+keras==2.9.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.0
+libclang==14.0.6
+littleutils==0.2.2
+llvmlite==0.38.0
+locket==1.0.0
+lxml==4.9.1
+Mako==1.2.0
+Markdown==3.3.6
+MarkupSafe==2.1.1
+marshmallow==3.15.0
+marshmallow-enum==1.5.1
+matplotlib==3.6.1
+matplotlib-inline==0.1.3
+miniful==0.0.6
+mistune==0.8.4
+mkl-fft==1.3.1
+mkl-random==1.2.2
+mkl-service==2.4.0
+more-click==0.1.1
+more-itertools==8.12.0
+mygene==3.2.2
+mypy-extensions==0.4.3
+natsort==8.1.0
+nbclient==0.5.13
+nbconvert==6.4.4
+nbformat==5.2.0
+nest-asyncio==1.5.4
+networkx==2.8.6
+nltk==3.7
+notebook==6.4.10
+numba==0.55.1
+numexpr==2.8.3
 numpy
-scikit-learn
-scipy
-torch
-torch_geometric
-torch-sparse
-torch-scatter
+oauthlib==3.2.0
+ogb==1.3.3
+olefile==0.46
+omnipath==1.0.5
+openpyxl==3.0.10
+opt-einsum==3.3.0
+optuna==2.10.0
+outdated==0.2.1
+packaging==21.3
+pandas
+pandas-flavor==0.2.0
+pandocfilters==1.5.0
+parso==0.8.3
+partd==1.3.0
+patsy==0.5.2
+pbr==5.8.1
+pdfplot==0.0.3
+pexpect==4.8.0
+pgmpy==0.1.19
+pickleshare==0.7.5
+Pillow==6.2.1
+pingouin==0.5.1
+pip==23.2.1
+prettytable==3.2.0
+progressbar2==4.0.0
+prometheus-client==0.13.1
+prompt-toolkit==3.0.28
+protobuf==3.19.4
+psutil==5.9.0
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py4j==0.10.9.7
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycairo==1.19.1
+pycparser==2.21
+pydot==1.4.2
+pyFUME==0.2.25
+pygam==0.8.0
+Pygments==2.11.2
+pykeen==1.8.0
+pynndescent==0.5.6
+pyparsing==3.0.7
+pyperclip==1.8.2
+pyrsistent==0.18.1
+pystow==0.4.0
+python-dateutil==2.8.2
+python-igraph==0.10.2
+python-utils==3.3.3
+pytz==2022.1
+PyYAML==6.0
+pyzmq==22.3.0
+qtconsole==5.2.2
+QtPy==2.0.1
+rdkit-pypi==2022.3.5
+regex==2022.3.15
+reportlab==3.5.68
+requests==2.27.1
+requests-oauthlib==1.3.1
+rexmex==0.1.0
+rsa==4.8
+scanpy==1.9.1
+scikit-learn==0.24.2
+scipy==1.9.1
+seaborn==0.11.2
+Send2Trash==1.8.0
+sentencepiece==0.1.97
+session-info==1.0.0
+setuptools==68.2.2
+simpful==2.9.0
+six==1.16.0
+sklearn==0.0
+smart-open==6.3.0
+soupsieve==2.3.1
+SQLAlchemy==1.4.13
+stack-data==0.2.0
+statsmodels==0.13.3
+stdlib-list==0.8.0
+stevedore==3.5.0
+swifter==1.3.4
+tabulate==0.8.9
+tensorboard==2.9.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.9.1
+tensorflow-estimator==2.9.0
+tensorflow-io-gcs-filesystem==0.26.0
+tensorflow-probability==0.17.0
+termcolor==1.1.0
+terminado==0.13.3
+testpath==0.6.0
+texttable==1.6.7
+threadpoolctl==3.1.0
+tokenizers==0.12.1
+toml==0.10.2
+toolz==0.12.0
+tornado==6.1
+tqdm==4.64.1
+traitlets==5.1.1
+transformers==4.21.2
+typing==3.7.4.3
+typing_extensions==4.1.1
+typing-inspect==0.7.1
+umap-learn==0.5.2
+urllib3==1.26.9
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.1.1
+wget==3.2
+wheel==0.37.1
+widgetsnbextension==3.6.0
+wrapt==1.14.0
+xarray==2022.3.0
+xlrd
+XlsxWriter==3.0.3
+zipp==3.7.0
