--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 absl-py==1.0.0
 alembic==1.7.7
-anndata==0.8.0
+anndata
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 asttokens==2.0.5
@@ -10,12 +10,12 @@ autopage==0.5.0
 backcall==0.2.0
 beautifulsoup4==4.10.0
 bio==1.4.0
-biopython==1.80
+biopython
 biothings-client==0.2.6
 bleach==4.1.0
 bs4==0.0.1
 cachetools==5.0.0
-causaldag==0.1a163
+causaldag
 certifi==2022.6.15
 cffi==1.15.0
 charset-normalizer==2.0.12
@@ -24,12 +24,12 @@ click==8.1.2
 click-default-group==1.2.2
 cliff==3.10.1
 cloudpickle==2.1.0
-cmaes==0.8.2
+cmaes
 cmd2==2.4.0
 colorlog==6.6.0
-conditional-independence==0.1a5
-contourpy==1.0.7
-csrgraph==0.1.28
+conditional-independence
+contourpy
+csrgraph
 cycler==0.11.0
 Cython==0.29.32
 dask==2022.12.0
@@ -37,11 +37,11 @@ dataclasses==0.6
 dataclasses-json==0.5.7
 debugpy==1.5.1
 decorator==5.1.1
-deepchem==2.6.1
+deepchem
 defusedxml==0.7.1
-dgl==0.9.0
-dgl-cu102==0.6.1
-dgllife==0.3.0
+#dgl
+#dgl-cu102
+#dgllife
 dill==0.3.6
 dm-tree==0.1.7
 docdata==0.0.3
@@ -57,24 +57,24 @@ flatbuffers==1.12
 fonttools==4.31.1
 frozendict==2.3.4
 fsspec==2022.11.0
-fst-pso==1.8.1
+fst-pso
 future==0.18.2
-FuzzyTM==2.0.5
+FuzzyTM
 gast==0.4.0
 gensim==0.10.2
-goatools==1.2.3
+goatools
 google-auth==2.6.2
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
-graphical-model-learning==0.1a7
-graphical-models==0.1a16
+graphical-model-learning
+graphical-models
 greenlet==1.1.1
 grpcio==1.44.0
-h5py==3.6.0
+h5py
 hdf5plugin==4.1.1
-hickle==5.0.2
+hickle
 huggingface-hub==0.9.1
-hyperopt==0.2.7
+hyperopt
 idna==3.3
 igraph==0.10.2
 importlib-metadata==4.11.3
@@ -96,7 +96,7 @@ jupyter-core==4.9.2
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.1.0
 keras==2.9.0
-Keras-Preprocessing==1.1.2
+Keras-Preprocessing
 kiwisolver==1.4.0
 libclang==14.0.6
 littleutils==0.2.2
@@ -108,12 +108,12 @@ Markdown==3.3.6
 MarkupSafe==2.1.1
 marshmallow==3.15.0
 marshmallow-enum==1.5.1
-matplotlib==3.6.1
+matplotlib
 matplotlib-inline==0.1.3
-miniful==0.0.6
+miniful
 mistune==0.8.4
-mkl-fft==1.3.1
-mkl-random==1.2.2
+mkl-fft
+mkl-random
 mkl-service==2.4.0
 more-click==0.1.1
 more-itertools==8.12.0
@@ -139,8 +139,8 @@ opt-einsum==3.3.0
 optuna==2.10.0
 outdated==0.2.1
 packaging==21.3
-pandas==1.5.1
-pandas-flavor==0.2.0
+pandas
+pandas-flavor
 pandocfilters==1.5.0
 parso==0.8.3
 partd==1.3.0
@@ -164,7 +164,6 @@ pure-eval==0.2.2
 py4j==0.10.9.7
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycairo==1.19.1
 pycparser==2.21
 pydot==1.4.2
 pyFUME==0.2.25
