--- a/requirements.txt
+++ b/requirements.txt
@@ -1,216 +1,289 @@
-absl-py==1.0.0
+absl-py==1.4.0
+adjustText==0.8
+aiohttp==3.9.5
+aiosignal==1.3.1
+alabaster==0.7.13
 alembic==1.7.7
-anndata
+anndata==0.9.2
+anyio==3.0.0
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asn1crypto==1.5.1
 asttokens==2.0.5
 astunparse==1.6.3
-attrs==21.4.0
+async-timeout==4.0.3
+attrs==23.2.0
 autopage==0.5.0
+babel==2.17.0
 backcall==0.2.0
-beautifulsoup4==4.10.0
+beautifulsoup4==4.12.3
 bio==1.4.0
-biopython
+biopython==1.83
 biothings-client==0.2.6
-bleach==4.1.0
+blessed==1.20.0
+boto3==1.34.138
+botocore==1.34.138
+brokenaxes==0.6.1
+Brotli @ file:///home/conda/feedstock_root/build_artifacts/brotli-split_1695989787169/work
 bs4==0.0.1
-cachetools==5.0.0
-causaldag
+cached-property==1.5.2
+causaldag==0.1a163
 certifi==2022.6.15
-cffi==1.15.0
-charset-normalizer==2.0.12
+chardet @ file:///home/conda/feedstock_root/build_artifacts/chardet_1695468605343/work
+charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1698833585322/work
+chex==0.1.7
 class-resolver==0.3.8
-click==8.1.2
+click==8.1.7
 click-default-group==1.2.2
 cliff==3.10.1
 cloudpickle==2.1.0
-cmaes
+cmaes==0.10.0
 cmd2==2.4.0
 colorlog==6.6.0
-conditional-independence
-contourpy
-csrgraph
-cycler==0.11.0
+comm==0.2.2
+conditional-independence==0.1a6
+contourpy @ file:///home/conda/feedstock_root/build_artifacts/contourpy_1695554215751/work
+croniter==1.3.15
+csrgraph==0.1.28
+cycler @ file:///home/conda/feedstock_root/build_artifacts/cycler_1696677705766/work
 Cython==0.29.32
-dask==2022.12.0
+dask==2023.5.0
 dataclasses==0.6
 dataclasses-json==0.5.7
-debugpy==1.5.1
+dateutils==0.6.12
+debugpy==1.8.2
 decorator==5.1.1
-deepchem
+deepchem==2.6.1
+deepdiff==7.0.1
 defusedxml==0.7.1
-#dgl
-#dgl-cu102
-#dgllife
+-e git+https://code.roche.com/prescient-design/endo-rwd.git@c4085bd586ae1c1530eced28221260c504a645b7#egg=digital_twin_converter&subdirectory=digital_twin_package
 dill==0.3.6
-dm-tree==0.1.7
+dm-tree==0.1.8
+dnspython==2.6.1
 docdata==0.0.3
 docopt==0.6.2
 docrep==0.3.2
+docutils==0.20.1
+editor==1.6.6
 einops==0.4.1
 entrypoints==0.4
 et-xmlfile==1.1.0
+exceptiongroup==1.2.1
 executing==0.8.3
+fastapi==0.88.0
 filelock==3.8.0
 fisher==0.1.10
 flatbuffers==1.12
-fonttools==4.31.1
+flax==0.7.2
+fonttools @ file:///home/conda/feedstock_root/build_artifacts/fonttools_1716870642485/work
+freetype-py @ file:///home/conda/feedstock_root/build_artifacts/freetype-py_1650983368720/work
 frozendict==2.3.4
-fsspec==2022.11.0
-fst-pso
+frozenlist==1.4.1
+fsspec==2023.12.2
+fst-pso==1.8.1
+ftpretty==0.4.0
 future==0.18.2
-FuzzyTM
+FuzzyTM==2.0.9
 gast==0.4.0
 gensim==0.10.2
-goatools
-google-auth==2.6.2
+get-annotations==0.1.2
+goatools==1.4.6
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
-graphical-model-learning
-graphical-models
-greenlet==1.1.1
-grpcio==1.44.0
-h5py
+graphical-model-learning==0.1a8
+graphical-models==0.1a21
+greenlet @ file:///home/conda/feedstock_root/build_artifacts/greenlet_1703201588965/work
+h11==0.14.0
+h5py==3.11.0
 hdf5plugin==4.1.1
-hickle
+hickle==5.0.3
 huggingface-hub==0.9.1
-hyperopt
-idna==3.3
-igraph==0.10.2
-importlib-metadata==4.11.3
-importlib-resources==5.4.0
+hyperopt==0.1.2
+idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1713279365350/work
+imagesize==1.4.1
+importlib_metadata==8.0.0
+importlib_resources @ file:///home/conda/feedstock_root/build_artifacts/importlib_resources_1711040877059/work
 inflect==5.4.0
+inquirer==3.2.4
+intel-openmp==2024.1.2
 ipdb==0.13.9
-ipykernel==6.9.2
-ipython==8.1.1
+ipykernel==6.29.5
+ipython==8.12.3
 ipython-genutils==0.2.0
-ipywidgets==7.7.0
-jedi==0.18.1
-Jinja2==3.0.3
-joblib==1.1.0
-jsonschema==4.4.0
+itsdangerous==2.2.0
+jax==0.4.13
+jaxlib==0.4.13
+jedi==0.19.1
+Jinja2==3.1.4
+jmespath==1.0.1
+joblib==1.4.2
 jupyter==1.0.0
-jupyter-client==7.1.2
 jupyter-console==6.4.3
-jupyter-core==4.9.2
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.1.0
+jupyter_client==8.6.2
+jupyter_core==5.7.2
 keras==2.9.0
-Keras-Preprocessing
-kiwisolver==1.4.0
+Keras-Preprocessing==1.1.2
+kiwisolver @ file:///home/conda/feedstock_root/build_artifacts/kiwisolver_1695379923772/work
 libclang==14.0.6
 littleutils==0.2.2
-llvmlite==0.38.0
+llvmlite==0.41.1
 locket==1.0.0
 lxml==4.9.1
 Mako==1.2.0
-Markdown==3.3.6
-MarkupSafe==2.1.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 marshmallow==3.15.0
 marshmallow-enum==1.5.1
-matplotlib
-matplotlib-inline==0.1.3
-miniful
+matplotlib @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-suite_1604870968348/work
+matplotlib-inline==0.1.7
+mdit-py-plugins==0.4.2
+mdurl==0.1.2
+miniful==0.0.6
 mistune==0.8.4
-mkl-fft
-mkl-random
+mkl==2024.1.0
 mkl-service==2.4.0
+mkl_fft==1.3.8
+mkl_random @ file:///home/conda/feedstock_root/build_artifacts/mkl_random_1707959978248/work
+ml-collections==0.1.1
+ml-dtypes==0.2.0
 more-click==0.1.1
 more-itertools==8.12.0
+mudata==0.2.3
+multidict==6.0.5
+munkres==1.1.4
 mygene==3.2.2
 mypy-extensions==0.4.3
-natsort==8.1.0
-nbclient==0.5.13
-nbconvert==6.4.4
-nbformat==5.2.0
-nest-asyncio==1.5.4
-networkx==2.8.6
+myst-parser==3.0.1
+natsort==8.4.0
+nest-asyncio==1.6.0
+networkx==3.1
 nltk==3.7
-notebook==6.4.10
-numba==0.55.1
+numba==0.58.1
 numexpr==2.8.3
-numpy
-oauthlib==3.2.0
+numpy @ file:///home/conda/feedstock_root/build_artifacts/numpy_1687808301083/work
+numpyro==0.11.0
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nvjitlink-cu12==12.5.40
+nvidia-nvtx-cu12==12.1.105
 ogb==1.3.3
 olefile==0.46
 omnipath==1.0.5
-openpyxl==3.0.10
+openpyxl==3.1.5
 opt-einsum==3.3.0
+optax==0.1.0
 optuna==2.10.0
+ordered-set==4.1.0
 outdated==0.2.1
-packaging==21.3
-pandas
-pandas-flavor
+packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1710075952259/work
+pandas==2.0.3
+pandas-flavor==0.6.0
 pandocfilters==1.5.0
 parso==0.8.3
 partd==1.3.0
-patsy==0.5.2
+patsy @ file:///home/conda/feedstock_root/build_artifacts/patsy_1704469236901/work
 pbr==5.8.1
 pdfplot==0.0.3
-pexpect==4.8.0
+-e git+https://github.com/mims-harvard/PDGrapher.git@e7963166172d6c07aa84b9f219bd0eebea7a9b1e#egg=PDGrapher
+pexpect==4.9.0
 pgmpy==0.1.19
 pickleshare==0.7.5
-Pillow==6.2.1
+Pillow @ file:///home/conda/feedstock_root/build_artifacts/pillow_1675487152289/work
 pingouin==0.5.1
-pip==23.2.1
+platformdirs==4.2.2
+pooch @ file:///home/conda/feedstock_root/build_artifacts/pooch_1717777836653/work
 prettytable==3.2.0
 progressbar2==4.0.0
-prometheus-client==0.13.1
-prompt-toolkit==3.0.28
-protobuf==3.19.4
-psutil==5.9.0
+prompt_toolkit==3.0.47
+protobuf==3.20.3
+psutil==6.0.0
 ptyprocess==0.7.0
-pure-eval==0.2.2
+pure_eval==0.2.3
 py4j==0.10.9.7
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycairo==1.25.0
 pycparser==2.21
+pydantic==1.10.15
+pyDeprecate==0.3.2
 pydot==1.4.2
 pyFUME==0.2.25
+pyg-lib==0.4.0+pt22cu121
 pygam==0.8.0
-Pygments==2.11.2
+Pygments==2.18.0
+PyJWT==2.8.0
 pykeen==1.8.0
-pynndescent==0.5.6
-pyparsing==3.0.7
+pymongo==4.8.0
+pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1709721012883/work
 pyperclip==1.8.2
-pyrsistent==0.18.1
+pyro-api==0.1.2
+pyro-ppl==1.6.0
+PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1661604839144/work
 pystow==0.4.0
-python-dateutil==2.8.2
-python-igraph==0.10.2
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
+python-multipart==0.0.9
 python-utils==3.3.3
-pytz==2022.1
+pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1706886791323/work
 PyYAML==6.0
-pyzmq==22.3.0
+pyzmq==26.0.3
 qtconsole==5.2.2
 QtPy==2.0.1
 rdkit-pypi==2022.3.5
+readchar==4.1.0
+redshift-connector==2.1.5
 regex==2022.3.15
 reportlab==3.5.68
-requests==2.27.1
+requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1717057054362/work
 requests-oauthlib==1.3.1
 rexmex==0.1.0
-rsa==4.8
-scanpy==1.9.1
-scikit-learn==0.24.2
+rich==13.7.1
+rlPyCairo @ file:///home/conda/feedstock_root/build_artifacts/rlpycairo_1687519531733/work
+runs==1.2.2
+s3transfer==0.10.1
+scanpy==1.9.8
+scikit-learn==1.3.2
 scipy==1.9.1
-seaborn==0.11.2
+scramp==1.4.5
+scrublet==0.2.3
+scvi-tools==0.19.0
+seaborn @ file:///home/conda/feedstock_root/build_artifacts/seaborn-split_1696262444380/work
 Send2Trash==1.8.0
 sentencepiece==0.1.97
-session-info==1.0.0
-setuptools==68.2.2
+session_info==1.0.0
 simpful==2.9.0
-six==1.16.0
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
 sklearn==0.0
 smart-open==6.3.0
-soupsieve==2.3.1
+sniffio==1.3.1
+snowballstemmer==3.0.1
+soupsieve==2.5
+Sphinx==7.1.2
+sphinxcontrib-applehelp==1.0.4
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
 SQLAlchemy==1.4.13
+sqlalchemy-redshift==0.8.14
 stack-data==0.2.0
-statsmodels==0.13.3
+starlette==0.22.0
+starsessions==1.3.0
+stats==0.1.2a0
+statsmodels @ file:///home/conda/feedstock_root/build_artifacts/statsmodels_1702575354706/work
 stdlib-list==0.8.0
 stevedore==3.5.0
 swifter==1.3.4
-tabulate==0.8.9
-tensorboard==2.9.1
+tbb==2021.12.0
+tensorboard==2.11.2
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 tensorflow==2.9.1
@@ -218,30 +291,35 @@ tensorflow-estimator==2.9.0
 tensorflow-io-gcs-filesystem==0.26.0
 tensorflow-probability==0.17.0
 termcolor==1.1.0
-terminado==0.13.3
 testpath==0.6.0
 texttable==1.6.7
 threadpoolctl==3.1.0
 tokenizers==0.12.1
 toml==0.10.2
 toolz==0.12.0
-tornado==6.1
-tqdm==4.64.1
-traitlets==5.1.1
+tornado==6.4.1
+tqdm==4.66.4
+traitlets==5.14.3
 transformers==4.21.2
+Tree==0.2.4
+types-python-dateutil==2.9.0.20240316
 typing==3.7.4.3
-typing_extensions==4.1.1
 typing-inspect==0.7.1
-umap-learn==0.5.2
-urllib3==1.26.9
-wcwidth==0.2.5
+typing_extensions==4.12.2
+tzdata @ file:///home/conda/feedstock_root/build_artifacts/python-tzdata_1707747584337/work
+unicodedata2 @ file:///home/conda/feedstock_root/build_artifacts/unicodedata2_1695847997538/work
+urllib3==1.26.19
+uvicorn==0.30.0
+wcwidth==0.2.13
 webencodings==0.5.1
-Werkzeug==2.1.1
+websocket-client==1.8.0
+websockets==11.0.3
 wget==3.2
-wheel==0.37.1
-widgetsnbextension==3.6.0
 wrapt==1.14.0
 xarray==2022.3.0
-xlrd
+xgboost==2.0.3
+xlrd==2.0.1
 XlsxWriter==3.0.3
-zipp==3.7.0
+xmod==1.8.1
+yarl==1.9.4
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1695255097490/work
